--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,17 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.MainContainer{
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
-
+.CenterContainer{
+  height:500px;
+  width:350px;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
